---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed a crash related to ingredient satisfaction and disabled recipes
    - Fixed that the item picker would offer disabled/hidden belts

---------------------------------------------------------------------------------------------------
Version: 1.1.26
Date: 17. 10. 2021
  Changes:
    - Improved performance of the matrix solver determining valid free items (thanks RSBat!)
  Bugfixes:
    - Fixed a persistent crash on save load with the Nullius mod, sorry about that one
    - Fixed that certain machines, fuels, belts and train wagons that should be hidden were shown
    - Fixed that the player character would show up as a valid mining machine
    - Fixed a crash when using the utility dialog blueprint functionality with a large subfactory
    - Fixed that the auto-pause logic would touch the pause state in multiplayer when it really shouldn't

---------------------------------------------------------------------------------------------------
Version: 1.1.25
Date: 25. 08. 2021
  Changes:
    - Added better support for the Satisfactorio mod (thanks PFQNiet!)
  Bugfixes:
    - Fixed a crash with temporarily archived subfactories being deleted

---------------------------------------------------------------------------------------------------
Version: 1.1.24
Date: 24. 07. 2021
  Changes:
    - Updated the internal detection of recycling and barreling/stacking recipes to the current set of popular mods
  Bugfixes:
    - Fixed a crash with the utility dialog
    - Fixed a bug that prevent irrelevant free item choices being filtered out correctly

---------------------------------------------------------------------------------------------------
Version: 1.1.23
Date: 11. 07. 2021
  Features: